fix: font and alignment

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/mononoki.min.css");
-
 div {
 	text-align: center;
 }
@@ -47,8 +45,4 @@ h1, h2, h3 {
 
 .resume {
 	text-align: left;
-}
-
-* {
-  font-family: 'mononoki';
 }
